# eternity

./: .gitignore  Cargo.toml  README.md  SECURITY  flake.nix  justfile
.resources/ascii/: logo.txt
.resources/questions/: base.json  deep.json  existential.json
nix/: buildPackage.nix  devShell.nix  formatter.nix
src/: app.rs  config.rs  erro.rs  main.rs  types.rs
src/analysis/: mod.rs  patterns.rs  statistics.rs  themes.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/models/: answer.rs  capsule.rs  journal.rs  memory.rs  mod.rs  profile.rs  question.rs
src/questions/: base.rs  deep.rs  existential.rs  mod.rs
src/reflection/: engine.rs  mod.rs  templates.rs
src/ui/: capsule.rs  home.rs  journal.rs  mod.rs  profile.rs  question.rs  reflection.rs  timeline.rs
