[package]
name = "eternity"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Where will you spend eternity?"
repository = "https://github.com/playfairs/eternity"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
rand = "0.8"
ratatui = "0.26"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
